feat:消除java代码警告，符合阿里巴巴规约